feat: setup linting tools & repo config

--- a/src/styles/generic/_global.scss
+++ b/src/styles/generic/_global.scss
@@ -1,11 +1,11 @@
-@import "../settings/variables";
+@import '../settings/variables';
 
 html {
   font-size: $root-font-size;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: $body-base-font-size;
 }
