--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 // Generic
-@import "./generic/normalize";
-@import "./generic/reset";
-@import "./generic/global";
+@import './generic/normalize';
+@import './generic/reset';
+@import './generic/global';
 
 // Utilities
-@import "./utilities/index";
+@import './utilities/index';
